@@ -7,3 +7,4 @@
 ## Bugfixes
 
 - fix title in queue, fix overlapping issue in song results -- kaneryu on 2025-01-23
+- fix bug where seeking would cause the play button to show buffering indef -- kaneryu on 2025-01-24
